--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "format": "npm run prettier:fix && npm run lint:fix"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.26",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "styled-components": "6.0.0-rc.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.9",
